faster cli startup